Regression for multiple goals in simulator + cleanup comments